fixes button focus styles adds border radius to figure with background colors adds some stylings for tables sets font size on mobile to prevent zoom on inputs
sets focus styles for links
sets the code/pre elements to a variable bg color

--- a/css/_base.css
+++ b/css/_base.css
@@ -128,13 +128,20 @@ button.link {
 	line-height: 1;
 	text-align: unset;
 	text-decoration: none;
+	border: 1px solid transparent;
 	background-color: transparent;
 	color: var(--primary);
 	font-weight: inherit;
-	border: unset;
 }
 button.link:hover {
 	color: var(--black);
+	background-color: transparent;
+	border-color: transparent;
+}
+button.link:focus {
+	outline: 0;
+	box-shadow: var(--focus);
+	color: var(--primary);
 	background-color: transparent;
 }
 label,
@@ -174,7 +181,9 @@ figcaption {
 	padding: 0.75rem;
 }
 figure.figure-background figcaption {
-	background-color: var(--gray-neutral);
+	background-color: var(--gray-light);
+	border-bottom-right-radius: var(--border-radius);
+	border-bottom-left-radius: var(--border-radius);
 }
 figure.figure-right,
 figure.figure-left {
@@ -187,8 +196,17 @@ figure.figure-left img {
 }
 figure.figure-right figcaption,
 figure.figure-left figcaption {
-	align-self: center;
+	border-radius: unset;
 	padding-left: 1rem;
+}
+figure.figure-right figcaption {
+	border-top-right-radius: var(--border-radius);
+	border-bottom-right-radius: var(--border-radius);
+}
+
+figure.figure-left figcaption {
+	border-top-left-radius: var(--border-radius);
+	border-bottom-left-radius: var(--border-radius);
 }
 
 p {
@@ -257,21 +275,22 @@ li {
 
 table {
 	border-spacing: 0;
+	font-variant-numeric: tabular-nums;
 }
 
 td,
 th {
-	padding: 1.2rem 1.5rem;
+	padding: 0.75rem 1.25rem;
 }
 
 td:first-child,
 th:first-child {
-	padding-left: 0;
+	padding-left: 1rem;
 }
 
 td:last-child,
 th:last-child {
-	padding-right: 0;
+	padding-right: 1rem;
 }
 
 input,
@@ -280,7 +299,20 @@ fieldset,
 textarea {
 	margin-bottom: 1.5rem;
 }
-
+@media (max-width: 576px) {
+	input,
+	textarea,
+	select:focus {
+		font-size: 16px !important;
+	}
+}
+@supports (font-size: max(16px)) {
+	input,
+	textarea,
+	select:focus {
+		font-size: max(16px, inherit);
+	}
+}
 textarea {
 	min-height: 6.5rem;
 }
@@ -344,12 +376,26 @@ body {
 a {
 	color: var(--blue);
 	text-decoration: none;
+	border: 1px dashed transparent;
 }
 
 a:focus,
 a:hover {
 	color: var(--text-dark);
 	text-decoration: underline;
+}
+a:focus {
+	border-color: var(--primary);
+}
+a[target='_blank'] > span,
+.visually-hidden {
+	position: absolute !important;
+	height: 1px;
+	width: 1px;
+	overflow: hidden;
+	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+	clip: rect(1px, 1px, 1px, 1px);
+	white-space: nowrap; /* added line */
 }
 
 blockquote {
@@ -358,7 +404,7 @@ blockquote {
 
 pre,
 code {
-	background: #f4f5f6;
+	background: var(--gray-light);
 }
 
 pre {
